<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="review">Reviews</string>
    <string name="rating">Rating</string>
    <string name="Duration">Duration</string>
    <string name="about">About this movie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="movie">Movies</string>
    <string name="tvshow">Tv Shows</string>
    <string name="buy">Buy Now</string>
    <string name="loading">Loading..</string>
    <string name="user_score">User Score</string>
    <string name="bottom_nav_movie">Movies</string>
    <string name="bottom_nav_tvShow">Tv Shows</string>
    <string name="bottom_nav_fav">Favorite</string>
    <string name="no_fav_data">No favorites videos yet.</string>
    <string name="no_fav_data_detail">Let\'s take a look for amazing videos out there !</string>
    <string name="no_fav_tvshow">No favorites tv shows yet</string>
    <string name="no_fav_movie">No favorites movies yet</string>
</resources>