<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:layout_marginBottom="12dp"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintDimensionRatio="16:0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@drawable/movie" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="190dp"
        android:contentDescription="@string/image"
        android:elevation="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        tools:src="@drawable/ic_error" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="143dp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:maxLines="3"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="Release" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="Price" />

    <TextView
        android:id="@+id/tv_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="35dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:text="Review" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/tv_review"
        app:layout_constraintStart_toEndOf="@+id/tv_review"
        app:layout_constraintTop_toTopOf="@+id/tv_review" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/review"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/tv_review"
        app:layout_constraintTop_toBottomOf="@+id/tv_review"
        tools:ignore="MissingConstraints"
        tools:text="@string/review" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/rating"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_review"
        app:layout_constraintEnd_toStartOf="@+id/tv_duration"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        tools:text="Rating" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/rating"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/tv_rating"
        app:layout_constraintStart_toStartOf="@+id/tv_rating"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:text="@string/review" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/Duration"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/image"
        tools:text="@string/Duration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/Duration"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/tv_duration"
        app:layout_constraintStart_toStartOf="@+id/tv_duration"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration"
        tools:ignore="MissingConstraints"
        tools:text="@string/review" />


    <Button
        android:id="@+id/btn_buy"
        android:layout_width="match_parent"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_height="38dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:elevation="100dp"
        android:text="@string/buy"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/about"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_buy"
        app:layout_constraintStart_toStartOf="@+id/btn_buy"
        app:layout_constraintTop_toBottomOf="@+id/btn_buy"
        tools:text="@string/about" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:justificationMode="inter_word"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_buy"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_buy"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/about" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="26dp" />
</androidx.constraintlayout.widget.ConstraintLayout>